--- a/src/containers/Menu/styles.scss
+++ b/src/containers/Menu/styles.scss
@@ -2,6 +2,10 @@
     text-align: center;
     padding: 32px 0;
     background-color: rgb(177, 212, 231);
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
 
     &_buttons{
         display: flex;
