--- a/src/main.scss
+++ b/src/main.scss
@@ -6,3 +6,9 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container{
+    max-width: 1024px;
+    width: 100;
+    margin: 0 auto;
+}
