--- a/src/containers/Clientes/styles.scss
+++ b/src/containers/Clientes/styles.scss
@@ -14,6 +14,11 @@
     &:hover{
         opacity: 0.7;
     }
+
+    &--cancelar{
+        background-color: rgb(252, 63, 63);
+        color: #fff;
+    }
 }
 
 .list{
