--- a/src/components/FormCadastro/styles.scss
+++ b/src/components/FormCadastro/styles.scss
@@ -11,6 +11,7 @@
         &_nome{
             font-weight: bold;
             margin-bottom: 4px;
+            cursor: pointer;
         }
 
         &_input{
@@ -18,6 +19,7 @@
             border-radius: 8px;
             font-size: 16px;
             padding: 8px;
+            cursor: pointer;
         }
     }
 
