--- a/src/containers/styles.scss
+++ b/src/containers/styles.scss
@@ -67,8 +67,17 @@
     gap: 8px;
     margin: 32px 0;
 
-    &--inativos{
+    &_inativos{
         border-top: 1px solid blue;
+        padding-top: 32px;
+    }
+
+    &_title{
+        text-align: center;
+        color: rgb(195, 0, 0);
+    }
+
+    &--inativos_card{
         margin-top: 16px;
         padding-top: 16px;
     }
@@ -77,5 +86,11 @@
         display: flex;
         flex-direction: column-reverse;
         gap: 15px;
+    }
+
+    &_inexistente{
+        text-align: center;
+        margin-top: 32px;
+        color: red;
     }
 }
