--- a/src/components/ItemLista/styles.scss
+++ b/src/components/ItemLista/styles.scss
@@ -10,6 +10,39 @@
     &-inativo{
         opacity: 0.7;
     }
+
+    &_list{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        width: 100%;
+
+        &_item{
+            font-size: 8px;
+            font-weight: bold;
+            color: #fff;
+            background-color: rgb(82, 82, 255);
+            padding: 8px;
+            border-radius: 8px;
+            display: flex;
+            gap: 8px;
+            align-items: center;
+
+            &_button{
+                background-color: transparent;
+                border: none;
+                font-weight: bold;
+                color: #fff;
+                cursor: pointer;
+            }
+        }
+    }
+
+    @media(max-width: 536px){
+        flex-direction: column;
+        gap: 8px;
+        align-items: start;
+    }
 }
 
 .informacoe{
@@ -19,6 +52,15 @@
 
     &_linha{
         display: flex;
+        gap: 8px;
+        align-items: center;
+        &_input{
+            cursor: pointer;
+            border-color: blue;
+            border-radius: 8px;
+            padding: 3px;
+            transition: all ease 0.3s;
+        }
     }
 }
 
@@ -38,23 +80,8 @@
         gap: 16px;
     }
 
-    &_btnEstado{
-        cursor: pointer;
-        background-color: green;
+    &_btn{
         color: #fff;
-        font-weight: bold;
-        padding: 8px;
-        border: none;
-        border-radius: 8px;
-
-        &--desativado{
-            background-color: red;
-        }
-    }
-
-    &_btnExcluir{
-        background-color: red;
-        color:#fff;
         padding: 8px;
         font-size: 8px;
         font-weight: bold;
@@ -63,8 +90,32 @@
         cursor: pointer;
         transition: all ease 0.3s;
 
-        &:hover{
-            opacity: 0.7;
+        &_status{
+            background-color: green;
+
+            &--desativado{
+                background-color: red;
+            }
         }
+
+        &_excluir{
+            background-color: red;
+        }
+
+        &_add{
+            background-color: blue;
+        }
+
+        &:hover{
+            opacity: 0.8;
+        }
+    }
+
+    @media(max-width: 536px){
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        padding-top: 8px;;
+        border-top: 1px solid blue;
     }
 }
