--- a/src/components/ItemLista/styles.scss
+++ b/src/components/ItemLista/styles.scss
@@ -1,121 +1,121 @@
-.card{
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 56px;
+  padding: 16px;
+  border-radius: 16px;
+  border: 1px solid blue;
+
+  &-inativo {
+    opacity: 0.7;
+  }
+
+  &_list {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 56px;
-    padding: 16px;
-    border-radius: 16px;
-    border: 1px solid blue;
+    flex-wrap: wrap;
+    gap: 8px;
+    width: 100%;
 
-    &-inativo{
-        opacity: 0.7;
+    &_item {
+      font-size: 8px;
+      font-weight: bold;
+      color: #fff;
+      background-color: rgb(82, 82, 255);
+      padding: 8px;
+      border-radius: 8px;
+      display: flex;
+      gap: 8px;
+      align-items: center;
+
+      &_button {
+        background-color: transparent;
+        border: none;
+        font-weight: bold;
+        color: #fff;
+        cursor: pointer;
+      }
     }
+  }
 
-    &_list{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 8px;
-        width: 100%;
-
-        &_item{
-            font-size: 8px;
-            font-weight: bold;
-            color: #fff;
-            background-color: rgb(82, 82, 255);
-            padding: 8px;
-            border-radius: 8px;
-            display: flex;
-            gap: 8px;
-            align-items: center;
-
-            &_button{
-                background-color: transparent;
-                border: none;
-                font-weight: bold;
-                color: #fff;
-                cursor: pointer;
-            }
-        }
-    }
-
-    @media(max-width: 536px){
-        flex-direction: column;
-        gap: 8px;
-        align-items: start;
-    }
-}
-
-.informacoe{
-    display: flex;
+  @media (max-width: 536px) {
     flex-direction: column;
     gap: 8px;
-
-    &_linha{
-        display: flex;
-        gap: 8px;
-        align-items: center;
-        &_input{
-            cursor: pointer;
-            border-color: blue;
-            border-radius: 8px;
-            padding: 3px;
-            transition: all ease 0.3s;
-        }
-    }
+    align-items: start;
+  }
 }
 
-.acoes{
+.informacoe {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  &_linha {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    gap: 8px;
+    align-items: center;
+    &_input {
+      cursor: pointer;
+      border-color: blue;
+      border-radius: 8px;
+      padding: 3px;
+      transition: all ease 0.3s;
+    }
+  }
+}
 
-    &_line{
-        flex-direction: row;
-        gap: 32px;
+.acoes {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  &_line {
+    flex-direction: row;
+    gap: 32px;
+  }
+
+  &_status {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+
+  &_btn {
+    color: #fff;
+    padding: 8px;
+    font-size: 8px;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all ease 0.3s;
+
+    &_status {
+      background-color: green;
+
+      &--desativado {
+        background-color: red;
+      }
     }
 
-    &_status{
-        display: flex;
-        align-items: center;
-        gap: 16px;
+    &_excluir {
+      background-color: red;
     }
 
-    &_btn{
-        color: #fff;
-        padding: 8px;
-        font-size: 8px;
-        font-weight: bold;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: all ease 0.3s;
-
-        &_status{
-            background-color: green;
-
-            &--desativado{
-                background-color: red;
-            }
-        }
-
-        &_excluir{
-            background-color: red;
-        }
-
-        &_add{
-            background-color: blue;
-        }
-
-        &:hover{
-            opacity: 0.8;
-        }
+    &_add {
+      background-color: blue;
     }
 
-    @media(max-width: 536px){
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
-        padding-top: 8px;;
-        border-top: 1px solid blue;
+    &:hover {
+      opacity: 0.8;
     }
+  }
+
+  @media (max-width: 536px) {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 8px;
+    border-top: 1px solid blue;
+  }
 }
